--- a/com.sevenmartsupermarket/pom.xml
+++ b/com.sevenmartsupermarket/pom.xml
@@ -3,6 +3,28 @@
   <groupId>com.sevenmartsupermarket</groupId>
   <artifactId>com.sevenmartsupermarket</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+	
+	<build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.2.5</version>
+        <configuration>
+			<suiteXmlFiles>
+				 <file>src/main/resources/xmlFiles/parallel.xml</file>
+           
+				  </suiteXmlFiles>
+		</configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
   <dependencies>
 
 		<dependency>
